# adestruction

./: README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  publish.yml
caracal_destruct/: distribute.py  main.py
caracal_destruct/slurm/: run.py
tests/: mslist-config.yaml  slurm-config.yaml
