[tool.poetry]
name = "caracal-destruct"
version = "0.1.2"
description = "Batch runners for CARACal"
authors = ["sphemakh <sphemakh@gmail.com>"]
license = "MIT License"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy"
]
homepage = "https://github.com/caracal-pipeline/adestruction"
repository = "https://github.com/caracal-pipeline/adestruction"
keywords = ["Astronomy", "Slurm", "Pipelines"]
packages = [{include = "caracal_destruct"}]

[tool.poetry.dependencies]
caracal = {git="https://github.com/caracal-pipeline/caracal", branch="astropy"}
python = ">=3.9,<3.13"
click = "^8.1.3"
simple-slurm = "^0.2.6"
omegaconf = "^2.3.0"

[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
caracal-destruct = "caracal_destruct.main:driver"
